# CurlMan

./: .replit  CONTRIBUTING.md  README.md  api_analyzer.py  api_documentation.py  collections_manager.py  curl_parser.py  environment_manager.py  gemini_chat.py  graphql_handler.py  history_manager.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  request_analyzer.py  response_analyzer.py  utils.py  websocket_handler.py
agent_assets/: ai_google_dev_gemini-api_docs_document-processing.md
collections/: environments.json  www.reneturcios.com.json
docs/: feedback.md
feedback/: feedback_data.json
src/: App.jsx
src/components/: CurlAnalyzer.jsx
src/services/: curlParser.js  requestAnalyzer.js  responseAnalyzer.js
