[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-generativeai>=0.8.3",
    "graphene>=3.4.3",
    "graphql-core>=3.2.5",
    "requests>=2.32.3",
    "strawberry-graphql>=0.254.0",
    "streamlit>=1.41.0",
    "zipfile36>=0.1.3",
]
